--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.11.1",
     "next": "^14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18",
-    "react-firebase-hooks": "^5.1.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.1.1",
+    "@types/node": "22.5.4",
+    "@types/react": "18.3.5",
     "eslint-config-next": "14.2.2",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
