--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.14.0",
     "lucide-react": "^0.447.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
