--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.2",
     "@eslint/js": "^9.1.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "eslint-config-next": "14.2.2",
